--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,47 @@
+/*******************************************************************************
+MeyerWeb Reset
+*******************************************************************************/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*******************************************************************************
+Main Styles
+*******************************************************************************/
 
 body {
-  border: 0;
-  margin: 0;
   background: #f8f8f8;
   color: #888;
   font-family: "Lato", Helvetica, sans-serif;
@@ -21,6 +61,7 @@ body {
 }
 
 #header p {
+  margin: 1em 0 1em 0;
   padding-left: 2em;
 }
 
@@ -54,7 +95,6 @@ body {
   -o-transition:      all 0.5s ease-out;
   transition:         all 0.5s ease-out; 
 }
-
 
 .resp {
   color: #ccc;
@@ -107,8 +147,10 @@ body {
 #main_content h1 {
   color: #777;
   font-family: "Consolas", monospace;
+  font-size: 32px;
   font-weight: 500;
   padding-top: 1em;
+  margin: 15px 0;
 }
 
 #main_content a {
@@ -118,22 +160,22 @@ body {
   margin-right: 10px;
 }
 
-#main_content p {
-  padding-bottom: 40px;
-}
-
 #main_content a:hover {
   text-shadow: 2px 2px 4px #eee;
   color: #444;
 }
 
-#about {
+#main_content p {
+  padding-bottom: 40px;
+}
+
+#main_content section {
   max-width: 800px;
 }
 
-#projects {
-  max-width: 800px;
-}
+/*******************************************************************************
+Language Styles
+*******************************************************************************/
 
 .language {
   font-size: 16px;
